initial home setup

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,14 +3,14 @@
   <div class="container">
     <div>
       <img height="64" width="64" style="float: left" src="{{ "/assets/images/logo_64x64.png" | prepend: site.baseurl | prepend: site.url }}" />
-      <h1 class="logo" style="vertical-align: baseline;">
+      <h1 class="logo" style="margin:16px">
         <a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title_left }}<span>{{ site.title_right }}</span></a>
       </h1>
     </div>
 
-    <ul class="navbar">
+    <!-- <ul class="navbar">
       <li><a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About me</a></li>
       <li><a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" target="_blank">RSS</a></li>
-    </ul>
+    </ul> -->
   </div>
 </nav>
