--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,15 +1,13 @@
 <section class="intro">
   <div class="container">
-    <p class="lead"></p>
+    <p class="lead">Hi, I'm Daniele Bacarella and I work at HERE Technologies on the <a href="https://developer.here.com/develop/javascript-api">Maps API for Javascript</a>.</p>
   </div>
-  <section>
 
-     <section>
+     <section class="container">
        <h3>Projects:</h3>
        <ul>
          <li><a href="https://dbacarel.github.io/webgl_tryouts/shapes/demo.html">Shapes</a></li>
        </ul>
-       
      </section>
-  </section>
+
 </section>
