added contacts section

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,9 +2,9 @@
 <nav class="nav">
   <div class="container">
     <div>
-      <img height="64" width="64" style="float: left" src="{{ "/assets/images/logo_64x64.png" | prepend: site.baseurl | prepend: site.url }}" />
+      <img height="64" width="64" style="float: left" alt="mehfoo" src="{{ "/assets/images/logo_64x64.png" | prepend: site.baseurl | prepend: site.url }}" alt=""/>
       <h1 class="logo" style="margin:16px">
-        <a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title_left }}<span>{{ site.title_right }}</span></a>
+        <a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}" alt="foomeh">{{ site.title_left }}<span>{{ site.title_right }}</span></a>
       </h1>
     </div>
 
