--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi, I'm Daniele Bacarella and I work at HERE Technologies on the <a href="https://developer.here.com/develop/javascript-api">Maps API for Javascript</a>.</p>
+    <p class="lead">Hi, I'm a Software Engineer working at HERE Technologies on the <a href="https://developer.here.com/develop/javascript-api">Maps API for Javascript</a>.</p>
   </div>
 </section>
